# Gt1

./: .env.example  .gitignore  AUTO_LAUNCH_AND_ICONS_SETUP.md  CLEANUP_CHECKLIST.md  COMPREHENSIVE_WEB_SERVICES_VERIFICATION_REPORT.json  CURRENT_STATUS_REPORT.md  FORGEFINDER_INTEGRATION_PLAN.md  FRAMEWORK_AUTOMATION_STRATEGY.md  FRANK_HARDWARE_REPORT.md  FRANK_UPGRADE_VERIFICATION.md  FUNDING_STRATEGY_2025.md  GRANT_FUNDING_PRIORITIES.md  HEADQUARTERS_STRATEGY.md  INDEX.md  INTEGRATED_DEVICE_DASHBOARD.md  LICENSE  MCP_SETUP_README.md  MOBILE_APPS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  OVERSIGHT_REPORT.md  OVERWATCH_README.md  PATENT_STRATEGY.md  PERFORMANCE_OPTIMIZATIONS.md  PLATFORM_STRATEGY.md  PROTOFORGE_COMPLETE_ARCHITECTURE.md  PROTOFORGE_TESTING_FRAMEWORK.md  PR_TEMPLATE.md  README.md  REORG_LOG.md  REPOSITORY_STATUS.md  SBIR_Phase2_Submission_Package.md  SECURITY_LOCKDOWN.md  SELF_TESTING_CHECKLIST.md  SETUP_GUIDE.md  SIDD_DEMO.md  TASKBOT_README.md  TESTING_GUIDE.md  VERIFICATION_SUMMARY.md  WEB_SERVICES_INFRASTRUCTURE.md  Z-AREO_OBD2_SETUP_GUIDE.md  (+53 more)
.github/: README.md  labeler.yml
.github/workflows/: README.md  ci.yml  codeql.yml  dependency-audit.yml  dependency-update.yml  django.yml  label.yml  rezonate-build.yml  rezonate-deploy.yml  rezonate-docs.yml  rezonate-format.yml  super-linter.yml
ProtoForge/Funding/grant_packages/: MAGNOSECT_PACKAGE.md
ProtoForge/Legal_and_Grants/: PATENT_IP_INTEGRATION_STATUS.md
ProtoForge_AppBeta_LocalAutomation/: README.txt
ProtoForge_AppBeta_LocalAutomation/Grant_Materials/: Grant_Readiness_Summary.txt
ProtoForge_AppBeta_LocalAutomation/IPP_Training/: IPP_Script.txt
ProtoForge_AppBeta_LocalAutomation/NFT_System/: Contribution_Ledger_Template.txt
ProtoForge_AppBeta_LocalAutomation/ProtoClean_M1/: Technical_Overview.txt
ProtoForge_AppBeta_LocalAutomation/UDP_Parameters/: ChronoSoul_Protocol.txt  HRTC.txt
ProtoForge_AppBeta_LocalAutomation/app_beta/client/: form.html
ProtoForge_AppBeta_LocalAutomation/app_beta/server/: server.py
SurveyBot/: README.md  jira_sync.py  main.py  notion_sync.py  questions.json  requirements.txt  server.py
_TEMPLATES/: Naming_Conventions.md  RevenueStream_Template_README.md
actions-runner/: .credentials  .credentials_rsaparams  .runner  run-helper.sh.template
archive/: zip_analysis_report.json
automation/: README.md
automation/deploy/: README.md
automation/monitor/: README.md
automation/self-heal/: README.md  fix-references.sh  fix-yaml.sh
automation/setup/: README.md  install-dependencies.sh
automation/templates/: create-module.sh
automation/test/: README.md  run-all-tests.sh
ballsdeepnit_full_bundle/ballsdeepnit/: README.md  run_hydi.sh
ballsdeepnit_full_bundle/ballsdeepnit/milestones/: 01_bootstrap.md  02_module_fusion.md
ballsdeepnit_full_bundle/ballsdeepnit/src/: README.md
cursor/: README.md  process-artifact-data-f408.json  process_artifact_data_f408.py
docs/: README.md  component-status.json
examples/: Optimize_Prompts.ipynb  start_zareo_system.py
examples/partners/temporal_agents_with_knowledge_graphs/: temporal_agents_with_knowledge_graphs.ipynb
firmware/: README.md
firmware/midi-control/: README.md
firmware/motion-input/: README.md
firmware/power-management/: README.md
frank_standalone/: INSTALL.txt  README.md  config.json
grant_packages/: CHDR_COMPLETE_PACKAGE.md  FORGEAG_PACKAGE.md  FORGEFINDER_PACKAGE.md  PROTOYI_PACKAGE.md  REZONETTE_PACKAGE.md  Z_AERO_PACKAGE.md
hardware-design/: README.md
hardware-design/3d-models/: README.md
hardware-design/power-systems/: README.md
hardware-design/schematics/: README.md
hydi-voice/: .env.example  README.md  requirements.txt  start.sh
hydi-voice/app/: main.py
hydi-voice/flash/: PREP.md
hydi-voice/flash/nrf52/: README.md
hydi-voice/flash/realtek/: README.md
hydi-voice/flash/telink/: README.md
hydi-voice/static/: app.js  index.html  styles.css
hydi-voice/tools/: README.md  ble_probe.py  ble_scan_log.py
mobile/: setup-mobile-apps.sh
mobile/ballsdeepnit-mobile/: App.tsx  package.json
mobile/hydi-mobile/: App.tsx  README.md  app.json  metro.config.js  package.json
mobile/zareo-mobile/: App.tsx  package.json
scripts/: auto_launch_setup.py  ci-check.ps1  gh-org-hardening.ps1  gh-setup.ps1  harden.ps1  icon_generator.py  setup_all.py
software/: README.md
software/bluetooth-orchestration/: README.md  app.py  requirements.txt
software/midi-mapping/: README.md  mapping_engine.py  requirements.txt
software/performance-ui/: README.md  main.py  package-lock.json  package.json
src/: CommandGenerator.java  CommandREPL.java  DBHelper.java  LanguageManager.java  SelfFixer.java  ShellExecutor.java  ShellRouter.java  ShellType.java  SpeechEngine.java  cache_manager.py
src/.cache/disk/: cache.db
src/ballsdeepnit/: __init__.py  __main__.py  cli.py
src/ballsdeepnit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ballsdeepnit/auth/: __init__.py  auth_manager.py  models.py  profile_manager.py  security.py
src/ballsdeepnit/core/: __init__.py  config.py  (+8 more)
src/hydi_gui/: CommandBlockPane.java  CommandRouter.java  README.md  TTSStub.java
tests/: __init__.py  test_basic.py
tests/performance/: __init__.py  test_performance.py
unzipped_protoflow/src/: bluetoothHub.js  index.js  scaffolder.js  taskScheduler.js  udpValidator.js
web/: index.html
(+41 files in other folders)
